Fix avatar alignment

--- a/draft-packages/title-block-zen/KaizenDraft/TitleBlockZen/TitleBlockZen.scss
+++ b/draft-packages/title-block-zen/KaizenDraft/TitleBlockZen/TitleBlockZen.scss
@@ -242,7 +242,7 @@ $tab-container-height-small: $ca-grid * 2.5;
   }
 
   .hasSubtitle & {
-    transform: translateY(4px);
+    transform: translateY(10px);
   }
 
   .hasLongTitle & {
